--- a/data/sources/cloud-native-prague.yaml
+++ b/data/sources/cloud-native-prague.yaml
@@ -1,9 +1,215 @@
 series:
   meetupcom:
     url: https://www.meetup.com/Cloud-Native-Prague/
-    description: We are a group of enthusiasts of cloud native solutions from Prague
-      and we believe there is more of us out there! We want to meet you all. Let's
-      build a strong, cloud-native community to share experie
+    description: We are a group of enthusiasts of cloud native solutions from Prague and we believe there is more of us out there! We want to meet you all. Let's build a strong, cloud-native community to share experie
     title: Cloud Native Prague (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/8/0/3/9/600_494792825.jpeg
-  events: []
+  events:
+  - meetupcom:
+      description: 'Tue, May 18, 2021, 6:00 PM: Cloud-Native Prague #16 is here! Come join us online, share experiences and discuss successes and fuck-ups. It was a great last time, so prepare some drink and connect with'
+      title: 'Cloud Native Prague Meetup #16'
+      image: https://secure.meetupstatic.com/photos/event/3/8/0/e/600_496154350.jpeg
+      url: https://www.meetup.com/Cloud-Native-Prague/events/278042296/
+      ical_raw:
+      - BEGIN:VCALENDAR
+      - VERSION:2.0
+      - PRODID:-//Meetup//RemoteApi//EN
+      - CALSCALE:GREGORIAN
+      - METHOD:PUBLISH
+      - X-ORIGINAL-URL:https://www.meetup.com/Cloud-Native-Prague/events/27804229
+      - ' 6/ical/x.ics'
+      - X-WR-CALNAME:Events - x.ics
+      - X-MS-OLK-FORCEINSPECTOROPEN:TRUE
+      - BEGIN:VTIMEZONE
+      - TZID:Europe/Prague
+      - TZURL:http://tzurl.org/zoneinfo-outlook/Europe/Prague
+      - X-LIC-LOCATION:Europe/Prague
+      - BEGIN:DAYLIGHT
+      - TZOFFSETFROM:+0100
+      - TZOFFSETTO:+0200
+      - TZNAME:CEST
+      - DTSTART:19700329T020000
+      - RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
+      - END:DAYLIGHT
+      - BEGIN:STANDARD
+      - TZOFFSETFROM:+0200
+      - TZOFFSETTO:+0100
+      - TZNAME:CET
+      - DTSTART:19701025T030000
+      - RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
+      - END:STANDARD
+      - END:VTIMEZONE
+      - BEGIN:VEVENT
+      - DTSTART;TZID=Europe/Prague:20210518T180000
+      - DTEND;TZID=Europe/Prague:20210518T200000
+      - STATUS:CONFIRMED
+      - 'SUMMARY:Cloud Native Prague Meetup #16'
+      - DESCRIPTION:Cloud Native Prague\nTuesday\, May 18 at 6:00 PM\n\nCloud-Nat
+      - ' ive Prague #16 is here! Come join us online\, share experiences and disc'
+      - ' uss successes and fuck-ups. It was a great last time\, so prepare some .'
+      - ' ..\n\nhttps://www.meetup.com/Cloud-Native-Prague/events/278042296/'
+      - CLASS:PUBLIC
+      - CREATED:20210507T120948Z
+      - GEO:50.08;14.43
+      - LOCATION:Online event
+      - URL:https://www.meetup.com/Cloud-Native-Prague/events/278042296/
+      - LAST-MODIFIED:20210518T185632Z
+      - UID:event_278042296@meetup.com
+      - END:VEVENT
+      - END:VCALENDAR
+  - meetupcom:
+      description: 'Tue, Mar 2, 2021, 6:00 PM: Hey Cloud-natives,we are happy to announce another meetup with amazing talks. We will meet online, so there is no reason to change because of the stain on your old and belov'
+      title: 'Cloud Native Prague Meetup #15'
+      image: https://secure.meetupstatic.com/photos/event/a/5/e/c/600_494802476.jpeg
+      url: https://www.meetup.com/Cloud-Native-Prague/events/276422404/
+      ical_raw:
+      - BEGIN:VCALENDAR
+      - VERSION:2.0
+      - PRODID:-//Meetup//RemoteApi//EN
+      - CALSCALE:GREGORIAN
+      - METHOD:PUBLISH
+      - X-ORIGINAL-URL:https://www.meetup.com/Cloud-Native-Prague/events/27642240
+      - ' 4/ical/x.ics'
+      - X-WR-CALNAME:Events - x.ics
+      - X-MS-OLK-FORCEINSPECTOROPEN:TRUE
+      - BEGIN:VTIMEZONE
+      - TZID:Europe/Prague
+      - TZURL:http://tzurl.org/zoneinfo-outlook/Europe/Prague
+      - X-LIC-LOCATION:Europe/Prague
+      - BEGIN:DAYLIGHT
+      - TZOFFSETFROM:+0100
+      - TZOFFSETTO:+0200
+      - TZNAME:CEST
+      - DTSTART:19700329T020000
+      - RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
+      - END:DAYLIGHT
+      - BEGIN:STANDARD
+      - TZOFFSETFROM:+0200
+      - TZOFFSETTO:+0100
+      - TZNAME:CET
+      - DTSTART:19701025T030000
+      - RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
+      - END:STANDARD
+      - END:VTIMEZONE
+      - BEGIN:VEVENT
+      - DTSTART;TZID=Europe/Prague:20210302T180000
+      - DTEND;TZID=Europe/Prague:20210302T193000
+      - STATUS:CONFIRMED
+      - 'SUMMARY:Cloud Native Prague Meetup #15'
+      - DESCRIPTION:Cloud Native Prague\nTuesday\, March 2 at 6:00 PM\n\nHey Clou
+      - ' d-natives\,we are happy to announce another meetup with amazing talks. W'
+      - ' e will meet online\, so there is no reason to change because of the stai'
+      - ' ...\n\nhttps://www.meetup.com/Cloud-Native-Prague/events/276422404/'
+      - CLASS:PUBLIC
+      - CREATED:20210217T185900Z
+      - GEO:50.08;14.43
+      - LOCATION:Online event
+      - URL:https://www.meetup.com/Cloud-Native-Prague/events/276422404/
+      - LAST-MODIFIED:20210302T194930Z
+      - UID:event_276422404@meetup.com
+      - END:VEVENT
+      - END:VCALENDAR
+  - meetupcom:
+      description: 'Thu, Jan 28, 2021, 6:00 PM: Hi Cloud-natives,we hope you are safe and sound because winter is coming. We managed to prepare some exciting agenda for another online meetup - believe us or not - number '
+      title: 'Cloud Native Prague Meetup #14'
+      image: https://secure.meetupstatic.com/photos/event/5/a/2/0/600_494483072.jpeg
+      url: https://www.meetup.com/Cloud-Native-Prague/events/275827515/
+      ical_raw:
+      - BEGIN:VCALENDAR
+      - VERSION:2.0
+      - PRODID:-//Meetup//RemoteApi//EN
+      - CALSCALE:GREGORIAN
+      - METHOD:PUBLISH
+      - X-ORIGINAL-URL:https://www.meetup.com/Cloud-Native-Prague/events/27582751
+      - ' 5/ical/x.ics'
+      - X-WR-CALNAME:Events - x.ics
+      - X-MS-OLK-FORCEINSPECTOROPEN:TRUE
+      - BEGIN:VTIMEZONE
+      - TZID:Europe/Prague
+      - TZURL:http://tzurl.org/zoneinfo-outlook/Europe/Prague
+      - X-LIC-LOCATION:Europe/Prague
+      - BEGIN:DAYLIGHT
+      - TZOFFSETFROM:+0100
+      - TZOFFSETTO:+0200
+      - TZNAME:CEST
+      - DTSTART:19700329T020000
+      - RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
+      - END:DAYLIGHT
+      - BEGIN:STANDARD
+      - TZOFFSETFROM:+0200
+      - TZOFFSETTO:+0100
+      - TZNAME:CET
+      - DTSTART:19701025T030000
+      - RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
+      - END:STANDARD
+      - END:VTIMEZONE
+      - BEGIN:VEVENT
+      - DTSTART;TZID=Europe/Prague:20210128T180000
+      - DTEND;TZID=Europe/Prague:20210128T193000
+      - STATUS:CONFIRMED
+      - 'SUMMARY:Cloud Native Prague Meetup #14'
+      - DESCRIPTION:Cloud Native Prague\nThursday\, January 28 at 6:00 PM\n\nHi C
+      - ' loud-natives\,we hope you are safe and sound because winter is coming. W'
+      - ' e managed to prepare some exciting agenda for another online meetup - be'
+      - ' lie...\n\nhttps://www.meetup.com/Cloud-Native-Prague/events/275827515/'
+      - CLASS:PUBLIC
+      - CREATED:20210118T180638Z
+      - GEO:50.08;14.43
+      - LOCATION:Online event
+      - URL:https://www.meetup.com/Cloud-Native-Prague/events/275827515/
+      - LAST-MODIFIED:20210128T190350Z
+      - UID:event_275827515@meetup.com
+      - END:VEVENT
+      - END:VCALENDAR
+  - meetupcom:
+      description: 'Tue, Nov 24, 2020, 6:00 PM: Hey Cloud-natives,it seems like online meetups are our "new normal". Don''t be sad and come join us from your home, we will share experiences and discuss successes and f**k-'
+      title: 'Cloud Native Prague Meetup #13'
+      image: https://secure.meetupstatic.com/photos/event/d/9/1/6/600_493495574.jpeg
+      url: https://www.meetup.com/Cloud-Native-Prague/events/274535019/
+      ical_raw:
+      - BEGIN:VCALENDAR
+      - VERSION:2.0
+      - PRODID:-//Meetup//RemoteApi//EN
+      - CALSCALE:GREGORIAN
+      - METHOD:PUBLISH
+      - X-ORIGINAL-URL:https://www.meetup.com/Cloud-Native-Prague/events/27453501
+      - ' 9/ical/x.ics'
+      - X-WR-CALNAME:Events - x.ics
+      - X-MS-OLK-FORCEINSPECTOROPEN:TRUE
+      - BEGIN:VTIMEZONE
+      - TZID:Europe/Prague
+      - TZURL:http://tzurl.org/zoneinfo-outlook/Europe/Prague
+      - X-LIC-LOCATION:Europe/Prague
+      - BEGIN:DAYLIGHT
+      - TZOFFSETFROM:+0100
+      - TZOFFSETTO:+0200
+      - TZNAME:CEST
+      - DTSTART:19700329T020000
+      - RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
+      - END:DAYLIGHT
+      - BEGIN:STANDARD
+      - TZOFFSETFROM:+0200
+      - TZOFFSETTO:+0100
+      - TZNAME:CET
+      - DTSTART:19701025T030000
+      - RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
+      - END:STANDARD
+      - END:VTIMEZONE
+      - BEGIN:VEVENT
+      - DTSTART;TZID=Europe/Prague:20201124T180000
+      - DTEND;TZID=Europe/Prague:20201124T203000
+      - STATUS:CONFIRMED
+      - 'SUMMARY:Cloud Native Prague Meetup #13'
+      - 'DESCRIPTION:Cloud Native Prague\nTuesday\, November 24 at 6:00 PM\n\nHey '
+      - ' Cloud-natives\,it seems like online meetups are our "new normal". Don''t '
+      - ' be sad and come join us from your home\, we will share experiences and d'
+      - ' iscu...\n\nhttps://www.meetup.com/Cloud-Native-Prague/events/274535019/'
+      - CLASS:PUBLIC
+      - CREATED:20201111T185125Z
+      - GEO:50.08;14.43
+      - LOCATION:Online event
+      - URL:https://www.meetup.com/Cloud-Native-Prague/events/274535019/
+      - LAST-MODIFIED:20201124T195527Z
+      - UID:event_274535019@meetup.com
+      - END:VEVENT
+      - END:VCALENDAR
