--- a/data/sources/prague-devops.yaml
+++ b/data/sources/prague-devops.yaml
@@ -1,9 +1,113 @@
 series:
   meetupcom:
     url: https://www.meetup.com/Prague-DevOps-Meetup/
-    description: 'DevOps is the next level of Agile. While Agile connects Business
-      and Development to speed up the process. DevOps is connecting Development with
-      delivery to production and maintenance (IT Operations). '
+    description: 'DevOps is the next level of Agile. While Agile connects Business and Development to speed up the process. DevOps is connecting Development with delivery to production and maintenance (IT Operations). '
     title: Prague DevOps Meetup (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/6/e/7/4/600_474748276.jpeg
-  events: []
+  events:
+  - meetupcom:
+      description: 'Wed, Sep 8, 2021, 7:00 PM: Hello doers,The third online DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.The structure of the session will be one main'
+      title: Prague DevOps meetup online (September)
+      image: https://secure.meetupstatic.com/photos/event/6/e/7/4/600_474748276.jpeg
+      url: https://www.meetup.com/Prague-DevOps-Meetup/events/280234441/
+      ical_raw:
+      - BEGIN:VCALENDAR
+      - VERSION:2.0
+      - PRODID:-//Meetup//RemoteApi//EN
+      - CALSCALE:GREGORIAN
+      - METHOD:PUBLISH
+      - X-ORIGINAL-URL:https://www.meetup.com/Prague-DevOps-Meetup/events/2802344
+      - ' 41/ical/x.ics'
+      - X-WR-CALNAME:Events - x.ics
+      - X-MS-OLK-FORCEINSPECTOROPEN:TRUE
+      - BEGIN:VTIMEZONE
+      - TZID:Europe/Prague
+      - TZURL:http://tzurl.org/zoneinfo-outlook/Europe/Prague
+      - X-LIC-LOCATION:Europe/Prague
+      - BEGIN:DAYLIGHT
+      - TZOFFSETFROM:+0100
+      - TZOFFSETTO:+0200
+      - TZNAME:CEST
+      - DTSTART:19700329T020000
+      - RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
+      - END:DAYLIGHT
+      - BEGIN:STANDARD
+      - TZOFFSETFROM:+0200
+      - TZOFFSETTO:+0100
+      - TZNAME:CET
+      - DTSTART:19701025T030000
+      - RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
+      - END:STANDARD
+      - END:VTIMEZONE
+      - BEGIN:VEVENT
+      - DTSTART;TZID=Europe/Prague:20210908T190000
+      - DTEND;TZID=Europe/Prague:20210908T210000
+      - STATUS:CONFIRMED
+      - SUMMARY:Prague DevOps meetup online (September)
+      - DESCRIPTION:Prague DevOps Meetup\nWednesday\, September 8 at 7:00 PM\n\nH
+      - ' ello doers\, The third online DevOps meetup is here and we are ready to '
+      - ' welcome all DevOps enthusiasts\, from Prague or elsewhere.The structure '
+      - ' of the ...\n\nhttps://www.meetup.com/Prague-DevOps-Meetup/events/2802344'
+      - ' 41/'
+      - CLASS:PUBLIC
+      - CREATED:20210820T120401Z
+      - GEO:50.08;14.43
+      - LOCATION:Online event
+      - URL:https://www.meetup.com/Prague-DevOps-Meetup/events/280234441/
+      - LAST-MODIFIED:20210903T070258Z
+      - UID:event_280234441@meetup.com
+      - END:VEVENT
+      - END:VCALENDAR
+  - meetupcom:
+      description: 'Wed, Aug 4, 2021, 7:00 PM: Hello doers,The second online devops meetup is here and we are ready to welcome all devops enthusiasts, from Prague or elsewhere.The structure of the session will be similar'
+      title: Prague DevOps meetup online
+      image: https://secure.meetupstatic.com/photos/event/6/e/7/4/600_474748276.jpeg
+      url: https://www.meetup.com/Prague-DevOps-Meetup/events/277429169/
+      ical_raw:
+      - BEGIN:VCALENDAR
+      - VERSION:2.0
+      - PRODID:-//Meetup//RemoteApi//EN
+      - CALSCALE:GREGORIAN
+      - METHOD:PUBLISH
+      - X-ORIGINAL-URL:https://www.meetup.com/Prague-DevOps-Meetup/events/2774291
+      - ' 69/ical/x.ics'
+      - X-WR-CALNAME:Events - x.ics
+      - X-MS-OLK-FORCEINSPECTOROPEN:TRUE
+      - BEGIN:VTIMEZONE
+      - TZID:Europe/Prague
+      - TZURL:http://tzurl.org/zoneinfo-outlook/Europe/Prague
+      - X-LIC-LOCATION:Europe/Prague
+      - BEGIN:DAYLIGHT
+      - TZOFFSETFROM:+0100
+      - TZOFFSETTO:+0200
+      - TZNAME:CEST
+      - DTSTART:19700329T020000
+      - RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
+      - END:DAYLIGHT
+      - BEGIN:STANDARD
+      - TZOFFSETFROM:+0200
+      - TZOFFSETTO:+0100
+      - TZNAME:CET
+      - DTSTART:19701025T030000
+      - RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
+      - END:STANDARD
+      - END:VTIMEZONE
+      - BEGIN:VEVENT
+      - DTSTART;TZID=Europe/Prague:20210804T190000
+      - DTEND;TZID=Europe/Prague:20210804T203000
+      - STATUS:CONFIRMED
+      - SUMMARY:Prague DevOps meetup online
+      - DESCRIPTION:Prague DevOps Meetup\nWednesday\, August 4 at 7:00 PM\n\nHell
+      - ' o doers\, The second online devops meetup is here and we are ready to we'
+      - ' lcome all devops enthusiasts\, from Prague or elsewhere.The structure of'
+      - '  the...\n\nhttps://www.meetup.com/Prague-DevOps-Meetup/events/277429169/'
+      - ' '
+      - CLASS:PUBLIC
+      - CREATED:20210407T211502Z
+      - GEO:50.08;14.43
+      - LOCATION:Online event
+      - URL:https://www.meetup.com/Prague-DevOps-Meetup/events/277429169/
+      - LAST-MODIFIED:20210804T195703Z
+      - UID:event_277429169@meetup.com
+      - END:VEVENT
+      - END:VCALENDAR
